@@ -2258,6 +2258,8 @@ inclusion/exclusion of files works, and how to write patterns.</p>
   <li>jikes (the <a
     href="http://oss.software.ibm.com/developerworks/opensource/jikes/project">Jikes</a>
     compiler)</li>
+  <li>jvc (the Command-Line Compiler from Microsoft's SDK for Java /
+    Visual J++)</li>
 </ul>
 <p>For JDK 1.1/1.2 is classic the default. For JDK 1.3 is modern the default.</p>
 <h3>Parameters</h3>
